src/tests/PropDrilling/invalid/case#3/index.jsx
import React from 'react';
import ChildComponent from './ChildComponent'; // Certifique-se de importar o componente ChildComponent corretamente

const Component = ({ propDrilling }) => {
    return <ChildComponent prop={true ? propDrilling : propDrilling} />;
};

export default Component;
